--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -124,6 +124,7 @@
             position: relative;
             top: 7rem;
             left: 1rem;
+            width: 47rem;
             font-size: 3rem;
             color: #FFB600  ;
         }
@@ -228,6 +229,21 @@
             
         }
 
+        .menupic__artp{
+          height: 200px;
+          width: 220px;}
+
+
+          .menupic__textp{
+            display: flex;
+            justify-content: center;
+            position: relative;
+            left: 1rem;
+            font-family: 'HevelticaCond';
+            font-size: 1.4rem;
+            
+        }
+
 
         .articulosperro{
             display: grid;
@@ -248,7 +264,7 @@
             border-radius: 20px;
             border: 0.2rem outset #FF4800;
             font-family: 'HevelticaRoman';    
-            overflow: hidden;
+           
             
             
         }
@@ -328,12 +344,22 @@
     background-position-x: -620px;
   }
 
+  .menutextpr {
+    height: 20rem;
+    padding: 8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFB600;
+  }
+
   .articulosproductos__hijo{
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'HevelticaRoman';    
-    overflow: hidden;
+    
 
     border: 0.2rem solid $secondary-color;
    background-color: #FFEB0D;
@@ -498,6 +524,7 @@
       .hero__text{
           position: relative;
           left: -3rem;
+          width: 29rem;
           font-size: 1rem;
           color: #FFB600  ;
       }
@@ -530,13 +557,13 @@
       
       
       .menutext{
-         width: 100%;
-          height: 19rem;
-          padding: 8rem;
+         width: 29.59rem;
+          height: 25rem;
+          padding: 3rem;
           background-color:#FFB600;
           border: 1rem solid #FFB600;
           position: relative;
-          left: -3rem;
+          left: -1rem;
           }
       
       
@@ -770,7 +797,7 @@
 .articulosgato{
   display: grid;
   grid-template-columns: 20rem;
-  grid-template-rows: 30rem 30rem 30rem 30rem;
+  grid-template-rows: 30rem 30rem 30rem 30rem 30rem 30rem;
   justify-content: center;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
@@ -789,12 +816,37 @@ background-color: white;
   height: 22rem;
   display: inline-block;
   text-align: center;
-  background-position-y: -35px;
-           background-position-x: -487px;
-           background-size: cover;
-           background-color: $base-color;
   background: url("../Assets/hero-productos.png");
+  background-position-y: -35px;
+  background-position-x: -487px;
+  background-size: cover;
+  background-color: $base-color;
+  
 
+}
+
+
+.menutextpr {
+  height: 25rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFB600;
+}
+
+.articulosproductos{
+  width: 100%;
+  display: grid;
+ background-color: #FFB600;
+  justify-content: center;
+  grid-column-gap: 2rem;
+  grid-row-gap: 5rem;
+  padding: 4rem;
+
+  grid-template-columns: 20rem;
+  grid-template-rows: 30rem 30rem 30rem 30rem 30rem 30rem;
 }
 
 .articulosproductos__hijo{
@@ -812,9 +864,37 @@ background-color: white;
 
 /* PRODUCTS END*/
 
+/* CONTACT QUERY*/
 
+.heroContac{
+  width: 100%;
+  height: 22rem;
+  display: inline-block;
+  text-align: center;
+  background: url("../Assets/portadas_hero4.png");
+  background-repeat: no-repeat;    
+  background-size: cover;
+  background-position-x: -200px;
+  background-color: $secondary-color; }
 
-
-
-
+  .container{
+    h2{
+        justify-content: flex-start;
+        align-items: flex-end;
+        font-size: 2em;
+    }
+    .box{
+        grid-template-columns: 1fr 2fr;
+        .info{
+            grid-row: 1/3;
+            font-size: 1.2em;
+            background-position-x: -200px;
+        }
+    }
 }
+}
+
+
+
+
+
