--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -557,13 +557,12 @@
       
       
       .menutext{
-         width: 29.59rem;
+         width: 100%;
           height: 25rem;
           padding: 3rem;
           background-color:#FFB600;
           border: 1rem solid #FFB600;
-          position: relative;
-          left: -1rem;
+         
           }
       
       
