--- a/css/main.css
+++ b/css/main.css
@@ -70,8 +70,8 @@
     display: inline-block;
     background-image: url("../Assets/fondo patitas-01[401].png");
     width: 100%;
-    height: 10rem;
-    overflow: scroll; }
+    height: auto;
+    overflow: hidden; }
   .header__logo {
     position: relative;
     margin: 1.25rem 1.25rem 1.25rem 1.25rem;
@@ -243,8 +243,7 @@
   .articulosperro_p {
     font-family: 'HevelticaRoman';
     position: relative;
-    font-size: 0.8rem;
-    overflow: scroll; }
+    font-size: 0.8rem; }
   .articulosperro__img {
     height: auto;
     width: 30rem;
@@ -334,20 +333,19 @@
     display: inline-block;
     background-image: url("../Assets/fondo patitas-01[401].png");
     width: 100%;
-    height: 10rem;
-    overflow: scroll; }
+    height: auto; }
   .header__logo {
     position: relative;
     margin: 1.25rem 1.25rem 1.25rem 1.25rem;
     padding: 1.25rem 1.25rem 1.25rem 1.25rem;
     border-radius: 50%;
-    height: 8rem;
-    width: 8rem;
-    left: 35rem; }
+    height: 10rem;
+    width: 10rem;
+    left: 13rem; }
   .header__nav {
     position: relative;
-    top: -8rem;
-    left: 4rem; }
+    top: -10rem;
+    left: 1rem; }
   .list {
     display: none; }
   .hamburguer1:checked ~ .list {
@@ -423,7 +421,7 @@
     height: 150rem; }
   .menutext {
     width: 100%;
-    height: 25rem;
+    height: 28rem;
     padding: 3rem;
     background-color: #FFB600;
     border: 1rem solid #FFB600; }
@@ -546,8 +544,7 @@
   .articulosperro_p {
     font-family: 'HevelticaRoman';
     position: relative;
-    font-size: 0.8rem;
-    overflow: scroll; }
+    font-size: 0.8rem; }
   .articulosperro__img {
     height: auto;
     width: 30rem;
@@ -1084,8 +1081,8 @@ h3 {
     display: inline-block;
     background-image: url("../Assets/fondo patitas-01[401].png");
     width: 100%;
-    height: 10rem;
-    overflow: scroll; }
+    height: auto;
+    overflow: hidden; }
   .header__logo {
     position: relative;
     margin: 1.25rem 1.25rem 1.25rem 1.25rem;
@@ -1257,8 +1254,7 @@ h3 {
   .articulosperro_p {
     font-family: 'HevelticaRoman';
     position: relative;
-    font-size: 0.8rem;
-    overflow: scroll; }
+    font-size: 0.8rem; }
   .articulosperro__img {
     height: auto;
     width: 30rem;
@@ -1348,20 +1344,19 @@ h3 {
     display: inline-block;
     background-image: url("../Assets/fondo patitas-01[401].png");
     width: 100%;
-    height: 10rem;
-    overflow: scroll; }
+    height: auto; }
   .header__logo {
     position: relative;
     margin: 1.25rem 1.25rem 1.25rem 1.25rem;
     padding: 1.25rem 1.25rem 1.25rem 1.25rem;
     border-radius: 50%;
-    height: 8rem;
-    width: 8rem;
-    left: 35rem; }
+    height: 10rem;
+    width: 10rem;
+    left: 13rem; }
   .header__nav {
     position: relative;
-    top: -8rem;
-    left: 4rem; }
+    top: -10rem;
+    left: 1rem; }
   .list {
     display: none; }
   .hamburguer1:checked ~ .list {
@@ -1437,7 +1432,7 @@ h3 {
     height: 150rem; }
   .menutext {
     width: 100%;
-    height: 25rem;
+    height: 28rem;
     padding: 3rem;
     background-color: #FFB600;
     border: 1rem solid #FFB600; }
@@ -1560,8 +1555,7 @@ h3 {
   .articulosperro_p {
     font-family: 'HevelticaRoman';
     position: relative;
-    font-size: 0.8rem;
-    overflow: scroll; }
+    font-size: 0.8rem; }
   .articulosperro__img {
     height: auto;
     width: 30rem;
