--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -11,8 +11,8 @@
     display:inline-block;
     background-image: url("../Assets/fondo\ patitas-01[401].png");
     width: 100%;
-    height: 10rem;
-    overflow: scroll;
+    height: auto;
+    overflow: hidden;
     
     }
     .header__logo{
@@ -24,6 +24,8 @@
         width: 8rem;
         left: 35rem;
     }
+
+    
 
     .header__nav{
       position: relative;
@@ -282,7 +284,7 @@
             position: relative;
             
             font-size: 0.8rem;
-            overflow: scroll;
+            
             
         
         }
@@ -411,8 +413,8 @@
    display:inline-block;
    background-image: url("../Assets/fondo\ patitas-01[401].png");
    width: 100%;
-   height: 10rem;
-   overflow: scroll;
+   height: auto;
+   
    
    }
    .header__logo{
@@ -420,15 +422,15 @@
        margin: 1.25rem 1.25rem 1.25rem 1.25rem;
        padding:1.25rem 1.25rem 1.25rem 1.25rem; 
        border-radius: 50%;
-       height: 8rem;
-       width: 8rem;
-       left: 35rem;
+       height: 10rem;
+       width: 10rem;
+       left: 13rem;
    }
 
    .header__nav{
      position: relative;
-     top: -8rem;
-     left: 4rem;
+     top: -10rem;
+     left: 1rem;
     
    }
 
@@ -558,7 +560,7 @@
       
       .menutext{
          width: 100%;
-          height: 25rem;
+          height: 28rem;
           padding: 3rem;
           background-color:#FFB600;
           border: 1rem solid #FFB600;
@@ -744,7 +746,7 @@
             position: relative;
             
             font-size: 0.8rem;
-            overflow: scroll;
+            
             
         
         }
